<resources>
    <string name="app_name">Notes</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="ok">OK</string>
    <string name="set_password">Set password to Notes</string>
    <string name="enter_password">Enter your password</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_edit">Write a note</string>
    <string name="title_more">Additional information</string>
    <string name="passwords_not_matching">Passwords doesn\'t match</string>
    <string name="wrong_password">Wrong password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_your_note">Edit your note</string>
    <string name="create_your_note">Create a note</string>
    <string name="notify_me_at">Notify me at:</string>
    <string name="enable_notification">Enable notification</string>
    <string name="last_edit_time">Last edit time</string>

</resources>
